# openapi/trigger-gateway.json
@@ -244,6 +244,18 @@
             "type": "string",
             "format": "date-time"
           },
+          "errorCode": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "errorMessage": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
           "executionId": {
             "type": [
               "string",
